[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/headers/header.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/clickables/keyboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/modes/game_mode.gd" type="Script" id=3]
[ext_resource path="res://assets/images/scenes/transparent_area.png" type="Texture" id=4]
[ext_resource path="res://assets/images/scenes/logo_text_only.png" type="Texture" id=5]

[node name="game_mode" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="keyboard" parent="." instance=ExtResource( 2 )]

[node name="game_mode_header" parent="." instance=ExtResource( 1 )]

[node name="logo_text_only" type="Sprite" parent="game_mode_header"]
position = Vector2( 960.284, 135.376 )
texture = ExtResource( 5 )

[node name="button_home" type="TouchScreenButton" parent="game_mode_header"]
position = Vector2( 33.371, 207.512 )
scale = Vector2( 0.0853245, 0.0500352 )
normal = ExtResource( 4 )

[node name="button_settings" type="TouchScreenButton" parent="game_mode_header"]
position = Vector2( 37.3755, 267.58 )
scale = Vector2( 0.115915, 0.0512711 )
normal = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]

[connection signal="reskin" from="keyboard" to="." method="_on_reskin"]
[connection signal="pressed" from="game_mode_header/button_home" to="." method="on_home_pressed"]
